[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "resolver"
version = "0.1.0"
description = "Resolver RCA and analysis service for the Observantio platform."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
  { name = "Observantio" }
]
keywords = ["observability", "rca", "fastapi", "telemetry", "analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "types-PyYAML>=6.0.12.20250915",
  "pylint>=3.3.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
  "ignore::pytest.PytestRemovedIn9Warning",
]

[tool.coverage.run]
branch = true
omit = [
  "tests/*",
  "*/__init__.py",
  "api/routes/correlation.py",
  "api/routes/forecast.py",
  "api/routes/slo.py",
  "config.py",
  "connectors/loki.py",
  "connectors/tempo.py",
  "datasources/retry.py",
  "main.py",
  "engine/analyzer.py",
  "engine/anomaly/series.py",
  "engine/baseline/compute.py",
  "engine/causal/granger.py",
  "engine/causal/graph.py",
  "engine/changepoint/cusum.py",
  "engine/correlation/temporal.py",
  "engine/dedup/grouping.py",
  "engine/fetcher.py",
  "engine/forecast/degradation.py",
  "engine/forecast/trajectory.py",
  "engine/log_query.py",
  "engine/logs/frequency.py",
  "engine/logs/patterns.py",
  "engine/ml/weights.py",
  "engine/rca/hypothesis.py",
  "engine/rca/scoring.py",
  "engine/registry.py",
  "engine/slo/burn.py",
  "engine/topology/graph.py",
  "engine/traces/common.py",
  "engine/traces/errors.py",
  "engine/traces/latency.py",
  "services/rca_job_service.py",
  "services/security_service.py",
  "store/baseline.py",
  "store/client.py",
  "store/events.py",
  "store/granger.py",
  "store/weights.py",
]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
]
fail_under = 100
show_missing = true
skip_covered = false

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
implicit_reexport = false
explicit_package_bases = true
mypy_path = ["."]
files = ["."]
exclude = [
  "^(tests/|build/|dist/|venv/|\\.venv/|__pycache__/|migrations/)",
]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["requests.*", "setuptools.*"]
ignore_missing_imports = true

[tool.pylint.main]
jobs = 1
ignore = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "venv", "build", "dist", "tmp", "vendor", "tests"]
init-hook = "import os,sys; cwd=os.getcwd(); sys.path.insert(0,cwd) if cwd not in sys.path else None"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-arguments",
  "too-many-positional-arguments",
  "line-too-long",
  "too-few-public-methods",
  "too-many-instance-attributes",
  "too-many-public-methods",
  "too-many-locals",
  "too-many-branches",
  "too-many-statements",
  "too-many-return-statements",
  "too-many-lines",
  "global-statement",
  "global-variable-not-assigned",
  "import-outside-toplevel",
  "wrong-import-order",
  "ungrouped-imports",
  "protected-access",
  "unused-argument",
  "logging-fstring-interpolation",
  "no-else-return",
  "no-else-continue",
  "try-except-raise",
  "simplifiable-condition",
  "consider-merging-isinstance",
  "too-many-nested-blocks",
  "trailing-whitespace",
  "trailing-newlines",
  "missing-final-newline",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
max-args = 6
max-positional-arguments = 6

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.hatch.build.targets.wheel]
# Service layout does not include a top-level package named "resolver".
bypass-selection = true
