[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "resolver"
version = "0.0.3"
description = "Resolver RCA and analysis service for the Observantio platform."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Observantio" }]
keywords = ["observability", "rca", "fastapi", "telemetry", "analysis"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: FastAPI",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "fastapi>=0.111.0",
  "starlette>=0.49.1",
  "uvicorn[standard]>=0.29.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "pyjwt>=2.10.0",
  "numpy>=1.26.0",
  "scipy>=1.13.0",
  "scikit-learn>=1.5.0",
  "sqlalchemy>=2.0.25",
  "psycopg2-binary>=2.9.9",
  "redis>=5.0.0",
]

[project.urls]
Repository = "https://github.com/observantio/resolver"
Documentation = "https://observantio.github.io/pitch"
Changelog = "https://github.com/observantio/resolver/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "mypy>=1.18.2",
  "pylint>=3.3.0",
  "ruff>=0.9.0",
  "pytest>=9.0.0",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
]

schemathesis = [
  "schemathesis>=4.14.2,<5",
]

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
filterwarnings = [
  "ignore::DeprecationWarning:pydantic\\..*",
  "ignore::DeprecationWarning:starlette\\..*",
]

[tool.coverage.run]
branch = true
omit = [
  "tests/*",
  "*/__init__.py",
  "api/routes/correlation.py",
  "api/routes/forecast.py",
  "api/routes/slo.py",
  "config.py",
  "connectors/loki.py",
  "connectors/tempo.py",
  "datasources/retry.py",
  "main.py",
  "engine/analyzer.py",
  "engine/anomaly/series.py",
  "engine/baseline/compute.py",
  "engine/causal/granger.py",
  "engine/causal/graph.py",
  "engine/changepoint/cusum.py",
  "engine/correlation/temporal.py",
  "engine/dedup/grouping.py",
  "engine/fetcher.py",
  "engine/forecast/degradation.py",
  "engine/forecast/trajectory.py",
  "engine/log_query.py",
  "engine/logs/frequency.py",
  "engine/logs/patterns.py",
  "engine/ml/weights.py",
  "engine/rca/hypothesis.py",
  "engine/rca/scoring.py",
  "engine/registry.py",
  "engine/slo/burn.py",
  "engine/topology/graph.py",
  "engine/traces/common.py",
  "engine/traces/errors.py",
  "engine/traces/latency.py",
  "services/rca_job_service.py",
  "services/security_service.py",
  "store/baseline.py",
  "store/client.py",
  "store/events.py",
  "store/granger.py",
  "store/weights.py",
]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]
fail_under = 100
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "PTH", "RUF", "ERA", "T20"]

[tool.ruff.lint.isort]
known-first-party = ["resolver"]

[tool.mypy]
python_version = "3.11"
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_no_return = true
strict_equality = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
no_implicit_optional = true
implicit_reexport = false
explicit_package_bases = true
files = ["."]
exclude = [
  "^(build|dist|venv|\\.venv|__pycache__)/",
  "^tests/",
]

[tool.pylint.main]
jobs = 1
extension-pkg-allow-list = ["sqlalchemy"]
ignore = [".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".ruff_cache", ".venv", "venv", "build", "dist", "tmp", "vendor", "tests", "mutants"]
ignore-paths = ["^tests/", "^mutants/"]
init-hook = "import os, sys; cwd = os.getcwd(); sys.path.insert(0, cwd) if cwd not in sys.path else None"

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-many-locals",
  "too-many-branches",
]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 800

[tool.pylint.design]
max-args = 6
max-positional-arguments = 6
max-attributes = 35
max-public-methods = 25
max-returns = 10
max-nested-blocks = 5
max-statements = 80
min-public-methods = 0

[tool.pylint.basic]
variable-naming-style = "snake_case"
argument-naming-style = "snake_case"
attr-naming-style = "snake_case"
const-naming-style = "UPPER_CASE"
class-const-naming-style = "UPPER_CASE"

[tool.pylint.similarities]
min-similarity-lines = 8

[tool.hatch.build.targets.wheel]
packages = ["resolver"]
